[gd_scene load_steps=6 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://node/Common/HP/HP.tscn" type="PackedScene" id=2]
[ext_resource path="res://node/Tower/Tower.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Tower" type="KinematicBody2D"]
script = ExtResource( 3 )

[node name="Area2D" type="Area2D" parent="." groups=["player"]]
collision_layer = 2
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )

[node name="HP" parent="." instance=ExtResource( 2 )]
total = 98

[node name="InvencibilityTimer" type="Timer" parent="."]

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="died" from="HP" to="." method="_on_HP_died"]
